# mkdocs-remove-sections-plugin

./: README.md  build.sh  mkdocs.yml  mypy.ini  requirements.txt  setup.cfg
docs/: all-private-sections.md  index.md  missing-end.md  missing-nested.md  missing-start.md  test-sections.md
src/mkdocs_remove_sections_plugin/: __init__.py
